--- a/base/templates/serviceaccount.yaml
+++ b/base/templates/serviceaccount.yaml
@@ -9,4 +9,16 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- with .Values.serviceAccount.imagePullSecrets }}
+imagePullSecrets:
+{{- range $key, $value := .}}
+- name: {{ $value }}
+{{ end -}}
+{{- end -}}
+{{- with .Values.serviceAccount.secrets }}
+secrets:
+{{- range $key, $value := .}}
+- name: {{ $value }}
+{{ end -}}
+{{- end -}}
 {{- end -}}
