--- a/base/templates/service.yaml
+++ b/base/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.service -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -6,10 +7,22 @@ metadata:
     {{- include "base.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- with .Values.ports }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    {{- range $key, $value := . }}
+    - name: {{ $key }}
+      port: {{ $value.servicePort }}
+      targetPort: {{ $key }}
+      protocol: {{ $value.protocol }}
+      {{- range $subkey, $subvalue := . }}
+      {{- if and (eq $subkey "nodePort") (not $subvalue) }}
+      nodeport: 
+      {{- else if eq $subkey "nodePort" }}
+      nodePort: {{ $subvalue }}
+      {{- end }}
+      {{- end }}
+    {{- end }}
+  {{- end }}
   selector:
     {{- include "base.selectorLabels" . | nindent 4 }}
+{{- end -}}
