--- a/security/templates/privileged-clusterrolebinding.yaml
+++ b/security/templates/privileged-clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.privileged -}}
+{{- if .Values.privileged.enabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
