--- a/security/values.yaml
+++ b/security/values.yaml
@@ -1,6 +1,10 @@
 # Value for the security chart
 
 privileged:
+  enabled: true
   # list of namespace: serviceaccounts to grant access to the privileged psp
   # serviceAccounts:
   #   mynamespace: myserviceaccount
+
+restricted:
+  enabled: false
