--- a/security/templates/privileged-clusterrole.yaml
+++ b/security/templates/privileged-clusterrole.yaml
@@ -3,6 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ template "privileged.name" }}
+  labels:
+    {{- include "security.labels" . | nindent 4 }}
 rules:
 - apiGroups: ['policy']
   resources: ['podsecuritypolicies']
