--- a/security/templates/privileged-psp.yaml
+++ b/security/templates/privileged-psp.yaml
@@ -2,28 +2,11 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: privileged
+  name: {{ template "privileged.name" }}
   annotations:
-    seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
+    {{- toYaml .Values.privileged.annotations | nindent 4 }}
+  labels:
+    {{- include "security.labels" . | nindent 4 }}
 spec:
-  privileged: true
-  allowPrivilegeEscalation: true
-  allowedCapabilities:
-  - '*'
-  volumes:
-  - '*'
-  hostNetwork: true
-  hostPorts:
-  - min: 0
-    max: 65535
-  hostIPC: true
-  hostPID: true
-  runAsUser:
-    rule: 'RunAsAny'
-  seLinux:
-    rule: 'RunAsAny'
-  supplementalGroups:
-    rule: 'RunAsAny'
-  fsGroup:
-    rule: 'RunAsAny'
+  {{- toYaml .Values.privileged.spec | nindent 2 }}
 {{- end -}}
