--- a/security/templates/restricted-clusterrole.yaml
+++ b/security/templates/restricted-clusterrole.yaml
@@ -2,11 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: restricted
+  name: {{ template "restricted.name" }}
+  labels:
+    {{- include "security.labels" . | nindent 4 }}
 rules:
 - apiGroups: ['policy']
   resources: ['podsecuritypolicies']
   verbs:     ['use']
   resourceNames:
-  - restricted
+  - {{ template "restricted.name" }}
 {{- end -}}
