--- a/security/templates/restricted-clusterrolebinding.yaml
+++ b/security/templates/restricted-clusterrolebinding.yaml
@@ -2,10 +2,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: restricted
+  name: {{ template "restricted.name" }}
+  labels:
+    {{- include "security.labels" . | nindent 4 }}
 roleRef:
   kind: ClusterRole
-  name: restricted
+  name: {{ template "restricted.name" }}
   apiGroup: rbac.authorization.k8s.io
 subjects:
 {{- with .Values.restricted.serviceAccounts }}
@@ -13,6 +15,12 @@ subjects:
 - kind: ServiceAccount
   name: {{ $value }}
   namespace: {{ $key }}
+{{ end -}}
+{{- end -}}
+{{- with .Values.restricted.groups }}
+{{- range $key, $value := . }}
+- kind: Group
+  name: {{ $value }}
 {{ end -}}
 {{- end -}}
 {{- end -}}
