--- a/base/values.yaml
+++ b/base/values.yaml
@@ -95,13 +95,21 @@ ports:
   #   nodePort: 30000
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: hcp.medtronic.com
+      paths:
+      - /foo
+      - /bar
+      portName: http # select a port from .Values.ports
+    - host: hcp.medtronic.com
+      paths:
+      - /hcp
+      - /omer
+      portName: https # select a port from .Values.ports
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -111,13 +119,13 @@ ingress:
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-resources: {}
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources:
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 nodeSelector: {}
 
