added quote function to fix appsettings issue

--- a/base/templates/configMap.yaml
+++ b/base/templates/configMap.yaml
@@ -17,6 +17,6 @@ data:
 {{- $files := .Files }}
 {{- range .Values.configuration.files }}
   {{ . }}: |
-    {{ $files.Get (printf "configs/%s" .) }}
+    {{ $files.Get (printf "configs/%s" .) | quote }}
 {{ end -}}
 {{- end -}}
